--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -2,13 +2,13 @@ name: readme
 on:
   push:
     branches:
-      - main
+      - main-test
   pull_request:
     branches:
-      - main
+      - main-test
 jobs:
   readme:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.2
         with:
