--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -2,11 +2,11 @@ name: build-pr
 on:
   pull_request:
     branches:
-      - main
+      - main-test
 
 jobs:
   build:
-    runs-on: build
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     env:
       JAVA_OPTS: -Xms15G -Xmx15G -Xss10M -XX:MaxMetaspaceSize=2G -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
