--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: build
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     env:
       JAVA_OPTS: -Xms15G -Xmx15G -Xss10M -XX:MaxMetaspaceSize=2G -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
